# lopi

./: .gitignore  .lopi.toml.example  BACKSTORY.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  HANDOFF_M3_UI.md  KONJO_PROMPT.md  KONJO_QUALITY_FRAMEWORK.md  KONJO_VERIFIER.md  LEDGER.md  LICENSE  LOPI_DISTRIBUTION_PLAN.md  LOPI_KTB3_ATTENDED_RUNBOOK.md  LOPI_UI_VISION.md  LOPI_VS_OPENCLAW.md  MASTER_PLAN.md  NEXT.md  NEXT_SESSION_PROMPT.md  PLAN.md  PROMPTS_PLAN.md  README.md  RUN_MULTIPANE.md  UI_PLAN.md  fly.toml  lopi.toml.example
crates/lopi-agent/: Cargo.toml
crates/lopi-agent/src/: api_budget.rs  api_client.rs  api_client_tests.rs  claude.rs  claude_builders.rs  claude_events.rs  claude_events_tests.rs  claude_model.rs  claude_stream.rs  claude_stream_parse.rs  claude_support.rs  claude_tests.rs  dag.rs  dag_rows.rs  lib.rs  pattern_enricher.rs  prompt.rs  quota_kill_log.rs  quota_kill_log_tests.rs  reflection_harness.rs  runner.rs  scorer.rs  test_support.rs  transcript_import.rs  transcript_import_tests.rs  verifier.rs
crates/lopi-agent/src/eval/: judge.rs  mod.rs  tiers.rs
crates/lopi-agent/src/runner/: api_plan.rs  capture.rs  eval_runner.rs  finalize.rs  finalize_tests.rs  guardrails.rs  helpers.rs  lifecycle.rs  mod.rs  mod_tests.rs  plan_gate.rs  plan_steps.rs  postmortem.rs  postmortem_runner.rs  progress.rs  reflection.rs  run_loop.rs  schema_gate.rs  seed.rs  seed_tests.rs  speculative.rs  stability_runner.rs  stream.rs  stream_tests.rs  terminal_errors.rs  test_phase.rs  verifier_runner.rs
crates/lopi-agent/src/stability/: mod.rs  semantic.rs  similarity.rs
crates/lopi-agent/tests/: eval_regression.rs  parser_robustness.rs  quota_kill_log_fixture.rs  reflection_harness.rs
crates/lopi-agent/tests/fixtures/: eval_regression.json
crates/lopi-app/: Cargo.toml
crates/lopi-app/src/: github.rs  lib.rs  stripe.rs
crates/lopi-context/: Cargo.toml
crates/lopi-context/benches/: eviction.rs
crates/lopi-context/src/: error.rs  eviction.rs  lib.rs  stats.rs  tokens.rs  types.rs  window.rs
crates/lopi-context/tests/: api_message_ordering.rs  budget_fifo.rs  budget_lifo.rs  conclusion_preservation.rs  phase_eviction.rs  token_estimation.rs  tool_pair_atomicity.rs
crates/lopi-context/tests/common/: mod.rs
crates/lopi-core/: Cargo.toml
crates/lopi-core/src/: acceptance.rs  agent.rs  autonomy.rs  budget.rs  budget_preset.rs  config.rs  config_tests.rs  deliverable.rs  earned_trust.rs  eval_outcome.rs  event.rs  event_tests.rs  event_wire_format_tests.rs  gain.rs  lib.rs  loop_config.rs  loop_config_budget_tests.rs  loop_config_tests.rs  models.rs  permission_mode.rs  report.rs  schema.rs  security.rs  self_prompt.rs  stop_reason.rs  successor.rs  successor_tests.rs  task.rs  task_source.rs  task_tests.rs  template.rs  text.rs  tier.rs  topology.rs
crates/lopi-core/tests/: agent_event_golden.rs
crates/lopi-core/tests/fixtures/: agent_event_golden.json
crates/lopi-git/: Cargo.toml
crates/lopi-git/src/: diff.rs  lib.rs  manager.rs  rebase.rs  worktree.rs
crates/lopi-git/src/worktree/: tests.rs
crates/lopi-git/tests/: manager.rs  rebase.rs
crates/lopi-github/: Cargo.toml
crates/lopi-github/src/: lib.rs
crates/lopi-kcqf/: Cargo.toml
crates/lopi-kcqf/src/: clippy.rs  coverage.rs  lib.rs  tasks.rs
crates/lopi-mcp/: Cargo.toml
crates/lopi-mcp/src/: bridge.rs  client.rs  config.rs  jsonrpc.rs  lib.rs  protocol.rs  server.rs
crates/lopi-mcp/src/client/: tests.rs
crates/lopi-mcp/src/server/: tests.rs
crates/lopi-memory/: Cargo.toml
crates/lopi-memory/src/: lib.rs  schema.sql  store.rs  store_tests.rs
crates/lopi-memory/src/store/: audit.rs  branch.rs  budget.rs  checkpoints.rs  dag.rs  dead_letter.rs  eval_outcomes.rs  installations.rs  learnings.rs  lessons.rs  lessons_tests.rs  lineage.rs  lineage_tests.rs  loop_health.rs  maxx.rs  mod.rs  onboarding_import.rs  onboarding_import_tests.rs  pattern_upsert.rs  patterns.rs  patterns_tests.rs  q_routing.rs  quality.rs  quota.rs  result_cache.rs  run_trace.rs  schedule_chains.rs  schedule_chains_tests.rs  schedules.rs  stability.rs  task_logs.rs  task_repo.rs  tasks.rs  tests.rs  trust_ledger.rs  verifier.rs
crates/lopi-memory/tests/: learnings_store.rs
crates/lopi-orchestrator/: Cargo.toml
crates/lopi-orchestrator/src/: agent_rate_limit.rs  chain_schedule_manager.rs  chain_schedule_manager_tests.rs  constellation.rs  health.rs  lib.rs  maxx_loop.rs  maxx_loop_tests.rs  pool.rs  q_router.rs  queue.rs  quota_tracker.rs  schedule_manager.rs  scheduler.rs  task_build.rs  topology.rs
crates/lopi-orchestrator/src/constellation/: mod.rs  select.rs  tests.rs  types.rs
crates/lopi-orchestrator/src/pool/: budget_tests.rs  mod.rs  registry.rs  run_loop.rs  skills.rs  tests.rs  types.rs  worktree.rs
crates/lopi-orchestrator/tests/: chain_schedule_resume.rs  successor_enqueue.rs
crates/lopi-ratelimit/: Cargo.toml
crates/lopi-ratelimit/src/: budget.rs  circuit_breaker.rs  lib.rs
crates/lopi-remote/: Cargo.toml
crates/lopi-remote/src/: lib.rs  self_modify.rs  telegram.rs  whatsapp.rs
crates/lopi-remote/src/telegram/: budget.rs  callbacks.rs  draft.rs  format.rs  handlers.rs  mod.rs  monitor.rs  notify.rs
crates/lopi-skill/: Cargo.toml
crates/lopi-skill/src/: claude_commands.rs  claude_commands_tests.rs  invocation.rs  lib.rs  promote.rs  promoter.rs  registry.rs  tests.rs
crates/lopi-spec/: Cargo.toml
crates/lopi-spec/src/: lib.rs  python_extractor.rs  rust_extractor.rs  test_runner.rs
crates/lopi-tools/: Cargo.toml
crates/lopi-tools/src/: lib.rs  registry.rs
crates/lopi-toon/: Cargo.toml
crates/lopi-toon/src/: decode.rs  encode.rs  lib.rs
crates/lopi-toon/src/decode/: helpers.rs  mod.rs  parser.rs
crates/lopi-toon/src/encode/: helpers.rs  mod.rs
crates/lopi-ui/: Cargo.toml  build.rs
crates/lopi-ui/src/: index.html  lib.rs  placeholder.html  tui.rs  tui_tests.rs  web.rs  web_tests.rs
crates/lopi-ui/src/tui/: draw.rs
crates/lopi-webhook/: Cargo.toml
crates/lopi-webhook/src/: github.rs  github_tests.rs  issue.rs  issue_triage.rs  lib.rs
(+467 files in other folders)
