[workspace]
members = [
    "crates/lopi-core",
    "crates/lopi-git",
    "crates/lopi-agent",
    "crates/lopi-memory",
    "crates/lopi-orchestrator",
    "crates/lopi-ui",
    "crates/lopi-remote",
    "crates/lopi-webhook",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KonjoAI"]
license = "MIT"
repository = "https://github.com/konjoai/lopi"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
ratatui = "0.26"
crossterm = "0.27"
teloxide = { version = "0.13", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
git2 = "0.18"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5"
tokio-stream = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"

lopi-core = { path = "crates/lopi-core" }
lopi-git = { path = "crates/lopi-git" }
lopi-agent = { path = "crates/lopi-agent" }
lopi-memory = { path = "crates/lopi-memory" }
lopi-orchestrator = { path = "crates/lopi-orchestrator" }
lopi-ui = { path = "crates/lopi-ui" }
lopi-remote = { path = "crates/lopi-remote" }
lopi-webhook = { path = "crates/lopi-webhook" }

[package]
name = "lopi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance Rust agent orchestrator for Claude Code"

[[bin]]
name = "lopi"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
lopi-core.workspace = true
lopi-git.workspace = true
lopi-agent.workspace = true
lopi-memory.workspace = true
lopi-orchestrator.workspace = true
lopi-ui.workspace = true

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = "symbols"
