[workspace]
members = [
    "crates/lopi-core",
    "crates/lopi-context",
    "crates/lopi-git",
    "crates/lopi-agent",
    "crates/lopi-memory",
    "crates/lopi-orchestrator",
    "crates/lopi-ui",
    "crates/lopi-remote",
    "crates/lopi-webhook",
    "crates/lopi-toon",
    "crates/lopi-ratelimit",
    "crates/lopi-app",
    "crates/lopi-github",
    "crates/lopi-spec",
    "crates/lopi-tools",
    "crates/lopi-skill",
    "crates/lopi-mcp",
]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
authors = ["KonjoAI"]
license = "MIT"
repository = "https://github.com/konjoai/lopi"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
ratatui = "0.26"
crossterm = "0.27"
teloxide = { version = "0.13", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
git2 = "0.18"
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5"
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15", features = ["tonic"] }
tracing-opentelemetry = "0.23"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
which = "5"
tokio-cron-scheduler = { version = "0.10", features = ["signal"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tokio-util = { version = "0.7", features = ["rt"] }
mimalloc = { version = "0.1", default-features = false }

lopi-core = { path = "crates/lopi-core" }
lopi-context = { path = "crates/lopi-context" }
lopi-git = { path = "crates/lopi-git" }
lopi-agent = { path = "crates/lopi-agent" }
lopi-memory = { path = "crates/lopi-memory" }
lopi-orchestrator = { path = "crates/lopi-orchestrator" }
lopi-ui = { path = "crates/lopi-ui" }
lopi-remote = { path = "crates/lopi-remote" }
lopi-webhook = { path = "crates/lopi-webhook" }
lopi-toon = { path = "crates/lopi-toon" }
lopi-ratelimit = { path = "crates/lopi-ratelimit" }
lopi-app = { path = "crates/lopi-app" }
lopi-github = { path = "crates/lopi-github" }
lopi-spec = { path = "crates/lopi-spec" }
lopi-tools = { path = "crates/lopi-tools" }
lopi-skill = { path = "crates/lopi-skill" }
lopi-mcp = { path = "crates/lopi-mcp" }

[package]
name = "lopi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance Rust agent orchestrator for Claude Code"

[[bin]]
name = "lopi"
path = "src/main.rs"

[dependencies]
mimalloc.workspace = true
tokio.workspace = true
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
lopi-core.workspace = true
lopi-git.workspace = true
lopi-agent.workspace = true
lopi-memory.workspace = true
lopi-orchestrator.workspace = true
lopi-ui.workspace = true
lopi-remote.workspace = true
lopi-app.workspace = true
lopi-webhook.workspace = true
lopi-github.workspace = true
lopi-spec.workspace = true
lopi-skill.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio-cron-scheduler.workspace = true
tokio-tungstenite.workspace = true
chrono.workspace = true
futures.workspace = true
uuid.workspace = true

# OpenTelemetry — feature-gated. With `--features otel`, the binary
# initializes an OTLP exporter from OTEL_EXPORTER_OTLP_ENDPOINT and
# OTEL_SERVICE_NAME. Without the feature, lopi runs with zero OTel
# runtime cost — the `tracing` spans the agent emits stay local.
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[features]
default = []
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dev-dependencies]
# cargo-husky auto-installs .cargo-husky/hooks/pre-commit into .git/hooks/pre-commit
# on every `cargo build` or `cargo test` — zero manual hook setup required.
# user-hooks feature: reads from .cargo-husky/hooks/ instead of generating a default hook.
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = "symbols"
