[package]
name = "lopi-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The lopi agent loop: Plan -> Implement -> Test -> Score -> Retry -> PR"

[dependencies]
lopi-core.workspace = true
lopi-git.workspace = true
lopi-memory.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
