[package]
name = "lopi-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The lopi agent loop: Plan -> Implement -> Test -> Score -> Retry -> PR"

[dependencies]
lopi-core.workspace = true
lopi-context.workspace = true
lopi-git.workspace = true
lopi-ratelimit.workspace = true
chrono.workspace = true
uuid.workspace = true
lopi-memory.workspace = true
lopi-toon.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
rand = "0.8"
reqwest.workspace = true
futures.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
lopi-kcqf.workspace = true
