[package]
name = "lopi-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GitHub App OAuth + Stripe webhook server for lopi SaaS"

[dependencies]
lopi-core.workspace = true
lopi-memory.workspace = true
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
tokio = { workspace = true, features = ["full"] }
