[package]
name = "lopi-context"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
lopi-core = { path = "../lopi-core" }
tiktoken-rs = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "eviction"
harness = false
