[package]
name = "lopi-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Task queue and bounded agent pool for lopi"

[dependencies]
lopi-core.workspace = true
lopi-agent.workspace = true
lopi-git.workspace = true
lopi-memory.workspace = true
lopi-ratelimit.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-cron-scheduler.workspace = true
chrono.workspace = true
cron = "0.12"
anyhow.workspace = true
tracing.workspace = true
dashmap.workspace = true
serde.workspace = true
thiserror.workspace = true
