[package]
name = "lopi-ratelimit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Token-bucket rate limiter and circuit breaker for lopi's Anthropic API calls"

[dependencies]
tokio = { version = "1", features = ["time", "sync", "macros", "rt"] }
thiserror = "1"
tracing = "0.1"
serde = { workspace = true }
lopi-core = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { version = "1", features = ["test-util"] }
