[package]
name = "lopi-skill"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Skill registry — loads SKILL.md project knowledge the agent injects at runtime"

[dependencies]
anyhow.workspace = true
lopi-core.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
