[package]
name = "lopi-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool registry — declares external tools agents are allowed to call"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["sync", "fs", "rt"] }
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
