[package]
name = "lopi-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI dashboard and web API for lopi"

[dependencies]
lopi-core.workspace = true
lopi-memory.workspace = true
lopi-orchestrator.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
dashmap.workspace = true
lopi-ratelimit.workspace = true
lopi-spec.workspace = true
lopi-tools.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
chrono.workspace = true

[dev-dependencies]
# tower::ServiceExt::oneshot requires the `util` feature for `Router::oneshot`
# in axum integration tests.
tower = { version = "0.4", features = ["util"] }
